- Modes alias now handled [ticket:1171] - Unknown / no file extensions now play in all modes [ticket:1178] - Icons = false supported by HTML5 player [ticket:1141]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1550 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/components.html
+++ b/fl5/js/test/examples/components.html
@@ -31,6 +31,8 @@
             	name: "JSON Playlist + playlist.position",
             	config: {
             		"playlist.position": "bottom",
+					playlistsize: 100,
+					icons: false,
             		playlist: [{
             			levels: [{
             				file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
@@ -43,27 +45,11 @@
             		dock: "left"
             	}
             }, {
-            	name: "XML Playlist + playlist.position",
-            	config: {
-            		"playlist.position": "bottom",
-            		playlist: "../../../js/test/files/mrss.xml",
-            		controlbar: "top",
-            		dock: "left"
-            	}
-            },{
-            	name: "XML Playlist + playlist object",
-            	config: {
-            		playlist: {
-						position: "bottom"
-					},
-            		playlist: "../../../js/test/files/mrss.xml",
-            		controlbar: "top",
-            		dock: "left"
-            	}
-            }, {
             	name: "playlist, controlbar, dock",
             	config: {
             		playlist: "bottom",
+					playlistsize: 100,
+					icons: false,
             		levels: [{
             			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             		}, {
@@ -77,6 +63,8 @@
             	name: "playlist.position, controlbar.position, dock.position",
             	config: {
             		"playlist.position": "bottom",
+					playlistsize: 100,
+					icons: false,
             		levels: [{
             			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             		}, {
@@ -92,6 +80,8 @@
             		playlist: {
 						position: "bottom"
 					},
+					playlistsize: 100,
+					icons: false,
             		levels: [{
             			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             		}, {
