--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -31,12 +31,13 @@
             			"File paths": {
             				"No file specified": "nofile.html",
             				"Invalid file path specified": "badfile.html",
-							//"No file extension": "noextension.html",
+							"Unkown / no file extension": "noextension.html",
             				"Absolute file path": "filepathsabsolute.html",
             				"Root file path": "filepathsroot.html",
             				"Relative file path": "filepathsrelative.html"
             			},
-						"Mode specific targetting": "modespecificconfig.html"
+						"Mode specific targetting": "modespecificconfig.html",
+						"Mode alias": "modealias.html"
             		},
             		"Video codecs": {
             			"Single MP4": "single_mp4.html",
