- Object tag now correctly positioned for FF
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1558 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -160,6 +160,11 @@
             			"Settable wmode": "wmode.html",
             			"Download fallback": "downloadfallback.html"
             		}
+            	},
+            	"Player 5.5": {
+            		"Bugs": {
+            			"Embed location": "embedlocation.html"
+            		}
             	}
             };
             
