- Resize method for HTML5 now uses HTML5 mode's API [ticket:1209] - Embedder now attaches event listeners for events in setup config [ticket:1208]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1566 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/resize.html
+++ b/fl5/js/test/examples/resize.html
@@ -29,8 +29,7 @@
             });
 			
 			function resize(width, height){
-				document.getElementById("player").width = width;
-				document.getElementById("player").height = height;
+				jwplayer("player").resize(width, height);
 			}
         </script>
 		<a href="#" onclick="resize(340, 280);return false;">small</a>
