--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -84,8 +84,8 @@
 						"Loading and Configuration" : {
 							"Local": {
 								"Absolute referenced": {
-									"JavaScript": "plugins.html?"+escape('var config = {title:"Absolute Path - JavaScript", plugins:{"http://localhost/player-5.5a/js/test/examples/plugins/textplugin.js":{text:"Plugin successfully loaded!"}}}'),
-									"Flash":"plugins.html?"+escape('var config = {title:"Absolute Path - Flash", plugins:{"http://localhost/player-5.5a/js/test/examples/plugins/hd.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
+									"JavaScript": "plugins.html?"+escape('var config = {title:"Absolute Path - JavaScript", plugins:{"http://developer.longtailvideo.com/player/trunk/fl5/js/test/examples/plugins/textplugin.js":{text:"Plugin successfully loaded!"}}}'),
+									"Flash":"plugins.html?"+escape('var config = {title:"Absolute Path - Flash", plugins:{"http://developer.longtailvideo.com/player/trunk/fl5/js/test/examples/plugins/hd.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
 								},
 								"Root referenced": {
 									"JavaScript": "plugins.html?"+escape('var config = {title:"Root Path - JavaScript", plugins:{"/player-5.5a/js/test/examples/plugins/textplugin.js":{text:"Plugin successfully loaded!"}}}'),
@@ -97,7 +97,7 @@
 								},
 								"Bad Path": {
 									"JavaScript": "plugins.html?"+escape('var config = {title:"Bad Path - JavaScript", plugins:{"plugins/textplugin.js":{text:"Plugin successfully loaded!"}, "plugins/textplugin1.js":{text:"Plugin successfully loaded!"}}}'),
-									"Flash":"plugins.html?"+escape('var config = {title:"Bad Path - Flash", plugins:{"http://localhost/player-5.5a/js/test/examples/plugins/hd1.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
+									"Flash":"plugins.html?"+escape('var config = {title:"Bad Path - Flash", plugins:{"http://developer.longtailvideo.com/player/trunk/fl5/js/test/examples/plugins/hd1.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
 								},
 								"Mixed Mode": {
 									"CDN": "plugins.html?"+escape('var config = {title:"Mixed Mode - CDN", plugins:{"plugins/hd-cdn.js":{text:"Plugin successfully loaded!", "file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}'),
@@ -126,7 +126,8 @@
             		},
             		"Setup / remove": "setupandremove.html",
             		"Unit Tests": {
-            			"Events": "apiunittestevents.html",
+            			"Events (in setup block)": "apiunittesteventssetup.html",
+            			"Events (dynamic)": "apiunittesteventsdynamic.html",
             			"Play": "apiunittestplay.html",
             			"Pause": "apiunittestpause.html",
             			"Mute": "apiunittestmute.html",
