--- a/fl5/js/test/examples/videotag.html
+++ b/fl5/js/test/examples/videotag.html
@@ -14,16 +14,24 @@
         <p>
             This parses a &lt;video&gt; tag and sets up a player in it's place for IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
-        <video height="270" id="player" poster="http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg" width="480">
+        <video height="270" id="player1" poster="http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg" width="480">
+            <source src="http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4" type="video/mp4" /><source src="http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv" type="video/ogg" />
+            <p>
+                HTML5 Player should replace this.
+            </p>
+        </video>
+        <video height="270" id="player2" poster="http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg" width="480">
             <source src="http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4" type="video/mp4" /><source src="http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv" type="video/ogg" />
             <p>
                 HTML5 Player should replace this.
             </p>
         </video>
         <script type="text/javascript">
-            jwplayer("player").setup({
-            	players: settings.players(window.location.href)
-            });
+            while (document.getElementsByTagName('video').length > 0){
+				jwplayer(document.getElementsByTagName('video')[0].id).setup({
+            		players: settings.players(window.location.href)
+            	});
+			} 
         </script>
         <h3>HTML code</h3>
     </body>
