--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -88,8 +88,8 @@
 									"Flash":"plugins.html?"+escape('var config = {title:"Absolute Path - Flash", plugins:{"http://developer.longtailvideo.com/player/trunk/fl5/js/test/examples/plugins/hd.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
 								},
 								"Root referenced": {
-									"JavaScript": "plugins.html?"+escape('var config = {title:"Root Path - JavaScript", plugins:{"/player-5.5a/js/test/examples/plugins/textplugin.js":{text:"Plugin successfully loaded!"}}}'),
-									"Flash":"plugins.html?"+escape('var config = {title:"Root Path - Flash", plugins:{"/player-5.5a/js/test/examples/plugins/hd.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
+									"JavaScript": "plugins.html?"+escape('var config = {title:"Root Path - JavaScript", plugins:{"/player/trunk/fl5/js/test/examples/plugins/textplugin.js":{text:"Plugin successfully loaded!"}}}'),
+									"Flash":"plugins.html?"+escape('var config = {title:"Root Path - Flash", plugins:{"/player/trunk/fl5/js/test/examples/plugins/hd.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
 								},
 								"Relatively referenced": {
 									"JavaScript": "plugins.html?"+escape('var config = {title:"Relative Path - JavaScript", plugins:{"plugins/textplugin.js":{text:"Plugin successfully loaded!"}}}'),
