--- a/fl5/js/test/examples/docksetbutton.html
+++ b/fl5/js/test/examples/docksetbutton.html
@@ -20,7 +20,11 @@
         </div>
         <script type="text/javascript">
         	var config = {
-            	file: 'http://content.bitsontherun.com/videos/nPripu9l-327.mp4',
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
             	height: 270,
             	image: 'http://content.bitsontherun.com/thumbs/nPripu9l-480.jpg',
             	width: 480
