--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -77,7 +77,8 @@
             		},
             		"Components": {
             			"Controlbar": "controlbar.html",
-            			"Logo": "logo.html"
+            			"Logo": "logo.html",
+            			"Dock": "dock.html"
             		},
             		"Plugins": {
 						//"Overview": "plugins.html",
@@ -96,7 +97,7 @@
 									"Flash":"plugins.html?"+escape('var config = {title:"Relative Path - Flash", plugins:{"plugins/hd.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
 								},
 								"Bad Path": {
-									"JavaScript": "plugins.html?"+escape('var config = {title:"Bad Path - JavaScript", plugins:{"plugins/textplugin.js":{text:"Plugin successfully loaded!"}, "plugins/textplugin1.js":{text:"Plugin successfully loaded!"}}}'),
+									"JavaScript": "plugins.html?"+escape('var config = {title:"Bad Path - JavaScript", plugins:{"plugins/textplugin1.js":{text:"Plugin successfully loaded!"}}}'),
 									"Flash":"plugins.html?"+escape('var config = {title:"Bad Path - Flash", plugins:{"http://developer.longtailvideo.com/player/trunk/fl5/js/test/examples/plugins/hd1.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
 								},
 								"Mixed Mode": {
