- Dock disabled on iPad [ticket:1240] - Misnamed plugins do not block player setup [ticket:1246] - Flash plugins get pluginmode config property [ticket:1250] - Flash plugins loaded with "-h" [ticket:1251]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1629 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/videotag.html
+++ b/fl5/js/test/examples/videotag.html
@@ -29,7 +29,12 @@
         <script type="text/javascript">
             while (document.getElementsByTagName('video').length > 0){
 				jwplayer(document.getElementsByTagName('video')[0].id).setup({
-            		players: settings.players(window.location.href)
+            		players: settings.players(window.location.href),
+					events: {
+						onResize: function(evt){
+							console.log(evt.width, evt.height);
+						}
+					}
             	});
 			} 
         </script>
