- JSON playlists are working with embedder [ticket:1253] - YouTube Embed no longer throws error - Player can now be reembedded [ticket:1254] - Embedder can load multiple players on a page with the same plugin [ticket:1255]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1633 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/components.html
+++ b/fl5/js/test/examples/components.html
@@ -30,7 +30,6 @@
             var tests = [{
             	name: "playlist, controlbar, dock",
             	config: {
-					playlistfile: "../files/bitrates.xml",
             		levels: [{
             			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             		}, {
@@ -49,13 +48,14 @@
             }, {
             	name: "playlist.position, controlbar.position, dock.position",
             	config: {
-					playlistfile: "../files/bitrates.xml",
-            		levels: [{
-            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-            		}, {
-            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		playlist: [{
+	            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            			levels: [{
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            			}, {
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            			}]
             		}],
-            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
 					icons: false,
 					plugins: {
 						'./plugins/dockplugin.js': {}
@@ -68,7 +68,6 @@
             }, {
             	name: "playlist, controlbar, and dock objects",
             	config: {
-					playlistfile: "../files/bitrates.xml",
             		levels: [{
             			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             		}, {
@@ -93,13 +92,14 @@
             }, {
             	name: "components block",
             	config: {
-					playlistfile: "../files/bitrates.xml",
-            		levels: [{
-            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-            		}, {
-            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		playlist: [{
+	            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            			levels: [{
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            			}, {
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            			}]
             		}],
-            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
 					icons: false,
 					plugins: {
 						'./plugins/dockplugin.js': {}
@@ -120,13 +120,14 @@
             }, {
             	name: "invalid values",
             	config: {
-					playlistfile: "../files/bitrates.xml",
-            		levels: [{
-            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-            		}, {
-            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		playlist: [{
+	            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            			levels: [{
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            			}, {
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            			}]
             		}],
-            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
 					icons: false,
 					plugins: {
 						'./plugins/dockplugin.js': {}
@@ -147,13 +148,14 @@
             }, {
             	name: "none",
             	config: {
-					playlistfile: "../files/bitrates.xml",
-            		levels: [{
-            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
-            		}, {
-            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		playlist: [{
+	            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            			levels: [{
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            			}, {
+            				file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            			}]
             		}],
-            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
 					icons: false,
 					plugins: {
 						'./plugins/dockplugin.js': {}
