--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -81,7 +81,7 @@
             			"Dock": "dock.html"
             		},
             		"Plugins": {
-						//"Overview": "plugins.html",
+						"Plugin strings": "pluginstrings.html",
 						"Loading and Configuration" : {
 							"Local": {
 								"Absolute referenced": {
