- IE 9 rightly reports presence of Flash [ticket:1249], [ticket:1264] - iFrame embeds for Flash are now correctly sized [ticket:1265]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1651 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/playlist.html
+++ b/fl5/js/test/examples/playlist.html
@@ -18,42 +18,48 @@
             		}, {
             			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             		}],
-            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+					"captions.file": "hello.xml"
             	}, {
             		levels: [{
             			file: "http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4"
             		}, {
             			file: "http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv"
             		}],
-            		image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
+            		image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg",
+					"captions.file": "hello.xml"
             	}, {
             		levels: [{
             			file: "http://content.bitsontherun.com/videos/DMJODX8R-486405.mp4"
             		}, {
             			file: "http://content.bitsontherun.com/videos/DMJODX8R-604476.ogv"
             		}],
-            		image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
+            		image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg",
+					"captions.file": "hello.xml"
             	}, {
             		levels: [{
             			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             		}, {
             			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             		}],
-            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+					"captions.file": "hello.xml"
             	}, {
             		levels: [{
             			file: "http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4"
             		}, {
             			file: "http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv"
             		}],
-            		image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
+            		image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg",
+					"captions.file": "hello.xml"
             	}, {
             		levels: [{
             			file: "http://content.bitsontherun.com/videos/DMJODX8R-486405.mp4"
             		}, {
             			file: "http://content.bitsontherun.com/videos/DMJODX8R-604476.ogv"
             		}],
-            		image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
+            		image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg",
+					"captions.file": "hello.xml"
             	}],
             	rtmp: [{
             		levels: [{
