- Width / height in quotes now work [ticket:1274]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1671 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -49,6 +49,7 @@
             		}
             	},
             	"Configuration Tests": {
+					"Width / Height": "heightwidth.html",
 					"Providers": "providers.html", 
             		"Multiple players with various options": "multiple_customs.html",
 					"Components + positions": "components.html",
