- Multiple jwplayer.js files on a page no longer conflict with one another [ticket:1266]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1672 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -37,7 +37,8 @@
             				"Relative file path": "filepathsrelative.html"
             			},
 						"Mode specific targetting": "modespecificconfig.html",
-						"Mode alias": "modealias.html"
+						"Mode alias": "modealias.html",
+	            		"Multiple jwplayer.js": "multiplejwplayerjs.html"
             		},
             		"Video codecs": {
             			"Single MP4": "single_mp4.html",
