--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -61,6 +61,7 @@
             		},
             		"Playlists": {
             			"Progressive download": "playlist.html?type=progressive",
+            			"Progressive video + audio": "playlist.html?type=audio",
             			"RTMP": "playlist.html?type=rtmp",
             			"Mixed": "playlist.html?type=mixed",
             			"XML Playlits": "xmlplaylists.html"
