--- a/fl5/js/test/examples/mp3_ogg.html
+++ b/fl5/js/test/examples/mp3_ogg.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <title>Single OGG Example</title>
+        <title>Multiple audio sources</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
         <script type="text/javascript" src="settings.js">
@@ -11,16 +11,20 @@
         <script type="text/javascript">
             document.write("<h1>" + document.title + "</h1>");
         </script>
-        <p>
-            This sets up a player for IE9, FF, Chrome, Safari, and Opera, however, playback will fail in Safari and IE. IE < 9 will simply display "HTML5 Player should replace this".
+		 <p>
+           This page contains a player with multiple sources, so it should play back in IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
         <div height="270" id="player" width="480">
-        	HTML5 Player should replace this
+        	 HTML5 Player should replace this.
         </div>
         <script type="text/javascript">
             jwplayer("player").setup({
             	players: settings.players(window.location.href),
-            	file: "http://playertest.longtailvideo.com/bunny.ogg",
+            	levels: [{
+            		file: "http://playertest.longtailvideo.com/bunny.mp3"
+            	}, {
+            		file: "http://playertest.longtailvideo.com/bunny.ogg"
+            	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             });
         </script>
