--- a/fl5/js/test/examples/playlist.html
+++ b/fl5/js/test/examples/playlist.html
@@ -61,6 +61,49 @@
             		image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg",
 					"captions.file": "hello.xml"
             	}],
+            	audio: [{
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            	}, {
+            		levels: [{
+            			file: "http://playertest.longtailvideo.com//bunny.mp3"
+            		}, {
+            			file: "http://playertest.longtailvideo.com//bunny.ogg"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
+            	}, {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/DMJODX8R-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/DMJODX8R-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
+            	}, {
+            		levels: [{
+            			file: "http://playertest.longtailvideo.com//bunny.mp3"
+            		}, {
+            			file: "http://playertest.longtailvideo.com//bunny.ogg"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+            	}, {
+            		levels: [{
+            			file: "http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4"
+            		}, {
+            			file: "http://content.bitsontherun.com/videos/guYqV1AB-604476.ogv"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/guYqV1AB-480.jpg"
+            	}, {
+            		levels: [{
+            			file: "http://playertest.longtailvideo.com/bunny.mp3"
+            		}, {
+            			file: "http://playertest.longtailvideo.com/bunny.ogg"
+            		}],
+            		image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
+            	}],
             	rtmp: [{
             		levels: [{
             			bitrate: "2020",
