Don't display the mute icon by default ([ticket:1287])
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1708 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/listeners.html
+++ b/fl5/js/test/examples/listeners.html
@@ -71,6 +71,7 @@
             
             function forward(id) {
             	return function(evt) {
+                	console.log(evt);
             		var result = "";
             		var properties = events[id];
             		if (jwplayer.utils.typeOf(properties) == "string") {
@@ -125,6 +126,10 @@
             	"onPause": {
             		"oldstate": "string",
             		"newstate": "string"
+            	},
+            	"onSeek": {
+            		"position": "string",
+            		"offset": "string"
             	},
             	"onBuffer": {
             		"oldstate": "string",
