Adding 5.6 test cases
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1712 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -162,6 +162,15 @@
             		"Bugs": {
             			"Embed location": "embedlocation.html"
             		}
+            	},
+            	"Player 5.6": {
+            		"Bugs": {
+            			"Switching HTTP mediaprovider": "switchhttp.html",
+            			"Mixed plugin locations": "mixedpluginlocations.html"
+            		},
+            		"Features": {
+            		    "Enchanced tabbing capabilities": "tabbing.html", 
+            		}
             	}
             };
             
