--- a/fl5/js/test/index.html
+++ b/fl5/js/test/index.html
@@ -214,7 +214,7 @@
 			if($(arr[i]).val()) {
 				var value = $(arr[i]).val();
 				if (value.indexOf("files/") > -1){
-					value = window.location.href.split("index.html")[0]+"files/"+value.split("files/")[1];
+					value = "http://developer.longtailvideo.com/player/testing/files/"+value.split("files/")[1];
 				}
 				vrs[$(arr[i]).attr('name')] = value;
 				variables[$(arr[i]).attr('name')] = value;
@@ -228,7 +228,7 @@
 			
 		}
 		jwplayer("player").setup(jwplayer.utils.extend({flashplayer: "../../../"+settings.players[$('#players').val()]}, vrs));
-		var lnk = 'http://developer.longtailvideo.com/trac/testing/';
+		var lnk = 'http://developer.longtailvideo.com/player/trunk/fl5/js/test/index.html';
 		$("#permalink").val(lnk+'?'+$.param(variables));
 	};
 
